@@ -1,10 +1,9 @@
 package com.busycoder.java8.workshop.casestudy;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.function.Predicate;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import static java.util.stream.Collectors.groupingBy;
 import static java.util.stream.Collectors.joining;
@@ -17,27 +16,95 @@ public class A_BookCaseStudyQuestions {
 		List<Book> allBooks = loadAllBooks();
 	//	List<Book> allBooks = new LinkedList<>();
 		//0. print all books with authors
-//		allBooks.forEach(b-> System.out.println(b));
+     	//allBooks.forEach(b-> System.out.println(b));
 
 		// 1. Find books with more then 400 pages
-//		List<Book> booksMoreThen400Pages=allBooks.stream().filter(b-> b.getPages()>=400).collect(Collectors.toList());
+//		List<Book> booksMoreThen400Pages=allBooks.stream()
+//				.filter(b->b.getPages()>=400)
+//				.toList();
+
+		//booksMoreThen400Pages.forEach(x-> System.out.println(x));
+		//booksMoreThen400Pages.forEach(System.out::println);
+
 //
 		// 2. Find all books that are java books and more then 400 pages
-		Predicate<Book> p1= b-> b.getPages()>400;
-		Predicate<Book>p2= b-> b.getSubject()== Subject.JAVA;
-		//List<Book> booksMoreThen400PagesAndJava=allBooks.stream().filter(p1.and(p2)).collect(Collectors.toList());
+//		Predicate<Book> p1= b-> b.getPages()>400;
+//		Predicate<Book>p2= b-> b.getSubject()== Subject.JAVA;
+//		List<Book> booksMoreThen400PagesAndJava=allBooks.stream().filter(p1.and(p2)).toList();
+
+		//performance with streams*
 
 		// 3. We need the top three longest books
+//		List<Book>top3LongestBooks=allBooks.stream()
+//				.sorted(Comparator.comparing(Book::getPages).reversed())
+////				.skip(1)
+//				.limit(3)
+//				.toList();
+//		top3LongestBooks.forEach(b-> System.out.println(b));
+
+//		List<Book>top3LongestBooks=allBooks.stream()
+//				.sorted(( o1,  o2)-> Double.compare(o2.getPages(), o1.getPages()))
+////				.skip(1)
+//				.limit(3)
+//				.toList();
+//		top3LongestBooks.forEach(b-> System.out.println(b));
+
 
 		// 4. We need from the fourth to the last longest books
 
 		// 5. We need to get all the publishing years
-//		List<Integer> years=allBooks.stream()
+
+//		List<Integer>allYearsList=allBooks
+//				.stream()
+//				.map(b-> b.getYear())
+//				.toList();
+
+//		List<Integer>allYearsList=allBooks
+//				.stream()
 //				.map(Book::getYear)
-//				.collect(Collectors.toList());
+//				.toList();
 		
 		//6. print all the authors: flatMap
-		//Stream<Book> bookSteram = allBooks.stream();
+		//I was supplied with List<Book> --> Book -->List<Authror>
+		//i need to navigate from stream book to stram of author
+
+//		Stream<Stream<Author>> streamStream = allBooks
+//				.stream()
+//				.map(b -> b.getAuthors().stream());
+
+		//flatMap flatten the stream
+//		Stream<Author> streamAuthor = allBooks
+//				.stream()
+//				.flatMap(b -> b.getAuthors().stream());
+
+//		List<Author>authorList = allBooks
+//				.stream()
+//				.flatMap(b -> b.getAuthors().stream())
+//				.toList();
+
+//		List<List<Author>> list = allBooks
+//				.stream()
+//				.map(b -> b.getAuthors())
+//				.toList();
+
+//		Stream<Stream<Author>> streamStream = allBooks
+//				.stream()
+//				.map(b -> b.getAuthors().stream());
+
+//		Stream<Author> streamStream = allBooks
+//				.stream()
+//				.flatMap(b -> b.getAuthors().stream());
+
+//		List<Author>allAuthors= allBooks
+//				.stream()
+//				.flatMap(b -> b.getAuthors().stream())
+//				.toList();
+
+//		Stream<String> stringStream = allBooks
+//				.stream()
+//				.flatMap(b -> b.getAuthors().stream())
+//				.flatMap(a -> a.getCountryVisitors().stream());
+
 
 //		Stream<Stream<Author>> streamStream = bookSteram.map(b -> b.getAuthors().stream());
 
@@ -53,19 +120,27 @@ public class A_BookCaseStudyQuestions {
 //				.flatMap(b->b.getAuthors().stream())
 //				.map(Author::getCountry)
 //				.distinct()
-//				.collect(Collectors.toList());
+//				.toList();
+
+		List<String> allCountries=allBooks
+				.stream()
+				.flatMap(Book::getAuthorStream)
+				.map(Author::getCountry)
+				.distinct()
+				.toList();
+
 //
 //		allCountries.forEach(c-> System.out.println(c));
 
 		// in,us
-		String allCountriesName=allBooks
-				.stream()
-				.flatMap(b->b.getAuthors().stream())
-				.map(Author::getCountry)
-				.distinct()
-				.collect(joining(","));
+//		String allCountriesName=allBooks
+//				.stream()
+//				.flatMap(b->b.getAuthors().stream())
+//				.map(Author::getCountry)
+//				.distinct()
+//				.collect(joining(","));
 
-		System.out.println(allCountriesName);
+		//System.out.println(allCountriesName);
 
 		//8. Most recent book published
 //		Optional<Book> bookOptional=allBooks
@@ -73,6 +148,10 @@ public class A_BookCaseStudyQuestions {
 //				.max(Comparator.comparing(Book::getYear));
 //		System.out.println(bookOptional.orElseThrow(()-> new RuntimeException("book not found")));
 
+//				Optional<Book> bookOptional=allBooks
+//				.stream()
+//				.max(Comparator.comparingInt(Book::getYear).reversed());
+//		System.out.println(bookOptional.orElseThrow(()-> new RuntimeException("book not found")));
 
 		//9. want to know if book written by more then one authors
 		//t or f
@@ -89,6 +168,25 @@ public class A_BookCaseStudyQuestions {
 //				.mapToInt(b -> b.getPages())
 //				.sum();
 //		System.out.println(sum);
+
+
+		//Total no of pages
+
+//		Integer totalPages=allBooks.stream()
+//				.map(Book::getPages)
+//				.reduce(0, (p1,p2)-> p1+p2)
+//				.intValue();
+//
+//		Integer totalPages=allBooks.stream()
+//				.mapToInt(Book::getPages)
+//				.sum();
+
+
+		IntSummaryStatistics intSummaryStatistics = allBooks.stream()
+				.mapToInt(Book::getPages)
+				.summaryStatistics();
+		System.out.println(intSummaryStatistics.getMax());
+
 
 //		Optional<Integer> sumOpt=allBooks.stream()
 //				.map(b-> b.getPages())
@@ -121,15 +219,15 @@ public class A_BookCaseStudyQuestions {
 
 		//16. map of books per year
 		//Map<Integer, List<Book>>
-		Map<Integer, List<Book>> booksPerYearMap = allBooks.stream()
-				.collect(groupingBy(Book::getYear));
-		booksPerYearMap.entrySet().forEach(e-> System.out.println(e.getKey()+": "+e.getValue()));
+//		Map<Integer, List<Book>> booksPerYearMap = allBooks.stream()
+//				.collect(groupingBy(Book::getYear));
+//		booksPerYearMap.entrySet().forEach(e-> System.out.println(e.getKey()+": "+e.getValue()));
 
 		//17. book publish per year per title (subject)
 
-		Map<Integer, Map<Subject, List<Book>>> collect = allBooks.stream()
-				.collect(groupingBy(Book::getYear, groupingBy(Book::getSubject)));
-
+//		Map<Integer, Map<Subject, List<Book>>> collect = allBooks.stream()
+//				.collect(groupingBy(Book::getYear, groupingBy(Book::getSubject)));
+//
 
 		//18. map of book per year
 
